packages/static_bits/tests/compile_fail/decode_sleb128_ct_partial_slice.zig
const bits = @import("static_bits");

comptime {
    const bytes = [_]u8{ 0x7F, 0x00 };
    _ = bits.varint.decodeSleb128Ct(&bytes);
}
